# image-watcher

./: README.md  ghcidia.cabal  image-watcher.cabal
src/: Main.hs
