cabal-version:      2.4
name:               image-watcher
version:            0.1.0.0

author:             Samuel Gélineau
maintainer:         gelisam+github@gmail.com

executable image-watcher
  main-is:          Main.hs
  build-depends:    base
                  , fsnotify
                  , gtk
  hs-source-dirs:   src
  default-language: Haskell2010
